--- a/src/routes/characters/characters.css
+++ b/src/routes/characters/characters.css
@@ -1,11 +1,14 @@
 .contenedor {
-    display: flex;
-    gap: 1rem;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template: repeat(4, 1fr) / repeat(2, 1fr);
+    grid-auto-flow: row dense;
+    gap: 10px
 }
 
 .pagination {
     position: relative;
     right: 0px;
+    justify-items: center;
+    align-items: center;
+    align-self: center;
 }
