--- a/src/components/searchbar/searchbar.css
+++ b/src/components/searchbar/searchbar.css
@@ -12,39 +12,83 @@
   height: 1.7rem;
   outline: none;
   overflow: hidden;
-}
-
-.searchBar input {
-  border: none;
-  outline: none;
-  height: inherit;
-  padding-left: 5px;
-}
-
-.searchBar button {
-  justify-self: end;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
+  background-color: white;
+  padding-inline: 5px;
 }
 
 .searchBar::placeholder {
   color: #acacac;
 }
 
-.box {
-  position: absolute;
-  top: 2rem;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  border-radius: 1rem;
-  background-color: white;
-  -webkit-box-shadow: 0px 6px 30px 2px rgba(56,56,56,0.71);
--moz-box-shadow: 0px 6px 30px 2px rgba(56,56,56,0.71);
-box-shadow: 0px 6px 30px 2px rgba(56,56,56,0.71);
+.searchBar input {
+  border: none;
+  outline: none;
+  height: inherit;
 }
 
-a {
+.searchBar button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  display: inline-flex;
+  justify-content: center;
+}
+
+.searchResults {
+  position: absolute;
+  top: 2rem;
+  border-radius: 1rem;
+  width: 100%;
+  background-color: white;
+  -webkit-box-shadow: 0px 6px 30px 2px rgba(56, 56, 56, 0.71);
+  -moz-box-shadow: 0px 6px 30px 2px rgba(56, 56, 56, 0.71);
+  box-shadow: 0px 6px 30px 2px rgba(56, 56, 56, 0.71);
+  overflow: hidden;
+}
+
+.searchResults ul {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  list-style: none;
+  padding: 15px;
+  margin: 0;
+}
+
+.characterLink {
   text-decoration: none;
+  color: black;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+
+.characterLink img {
+  aspect-ratio: 1/1;
+  width: 80px;
+  border-radius: 25%;
+}
+
+.characterLink span {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.moreResultsButton {
+  background-color: #7d4ccc;
+  height: 40px;
+  border: none;
+  color: white;
+  font-size: 1rem;
+  position: relative;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.moreResultsButton:hover {
+  text-decoration: underline;
 }
