--- a/src/global.css
+++ b/src/global.css
@@ -14,7 +14,9 @@
   --colNum: var(--test);
 }
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -22,11 +24,13 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  display: grid;
-  columns: 1;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   background-color: #fafafa;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 main {
@@ -36,4 +40,8 @@ main {
   border-radius: 5px;
   box-shadow: 0px 0px 130px -50px var(--qwik-light-purple);
   overflow: hidden;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  padding: 2em 2em 0em;
 }
